--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ BOTNAME=JARVIS
 EMAIL=mahdirafati680@gmail.com
 PASSWORD=Mahdi@1381
 NEWS_API_KEY=61a77c2c9cda41349af41657a26f57ed
+WEATHER_API_KEY=74bff31cc10540e1b5f195834230611
+TMDB_API_KEY=fff545cc6a88e01be75f22a9808d901a
