--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ comtypes==1.1.10
 idna==2.10
 MouseInfo==0.1.3
 Pillow==8.2.0
-# PyAudio @ file:///D:/Quarantine/Python/JARVIS/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
+# PyAudio -> Donwload and install this from https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio (Only if you got any related error)
 PyAutoGUI==0.9.52
 pycodestyle==2.7.0
 PyGetWindow==0.0.9
